[package]
name = "copenhagen"
version = "0.1.0"
edition = "2021"
description = "A simple implementation of a wave function algorithm for tilemaps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy =  { version = "0.7.0", features = ["dynamic"] }
bevy-inspector-egui = "0.11.0"
rand = "0.8.0"